[package]
name = "firmware-rust-esp32-uwb"
version = "0.1.0"
authors = ["Moritz Riede <moritz@mriede.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32", features = ["binstart"] }
esp-idf-svc = "0.45"
esp-idf-hal = "0.40"
embedded-graphics = "0.7.1"
embedded-hal = "0.2"
embedded-svc = "0.24"
dotenv = "0.15"
dotenv_codegen = "0.15"
dw3000 = { version = "0.2", features = ['std'] }
anyhow = "1.0.69"
ssd1306 = "0.7.1"
smart-leds = "0.3"
ws2812-esp32-rmt-driver = "0.5"
smart-leds-trait = "0.2"
colorsys = "0.6"

[build-dependencies]
embuild = "0.30.4"
