[package]
name = "ledswarm_firmware"
version = "0.1.0"
authors = ["Moritz Riede <moritz@mriede.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
ledswarm_protocol = { path = "../ledswarm_protocol" }
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
ws2812-esp32-rmt-driver = "0.6.0"
smart-leds = "0.3.0"
adxl343 = "0.8.0"
smart-leds-trait = "0.2.1"
accelerometer = "0.12.0"
embedded-svc = "0.26.4"
colorz = "1.1.2"
#colorsys = "0.6.7"
anyhow = "1.0.79"
embedded-graphics = "0.8.1"
ssd1306 = "0.8.4"
esp-idf-hal = "0.42.5"
tinybmp = "0.5.0"
futures = "0.3.30"
serde = "1.0.195"
serde_derive = "1.0.195"
serde_json = "1.0.111"

[build-dependencies]
embuild = "0.31.3"
